--- a/templates/command/save.html.twig
+++ b/templates/command/save.html.twig
@@ -2,14 +2,14 @@
 {{ form_start(form, {'action': path('saveCommand'), 'method': 'POST'},{'attr': {'class': 'form-horizontal'}}) }}
   <div class="form-group">
     <h5>{{ form_label(form.client, "Client", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}</h5>
-    <div class="col-sm-10">
+    <div class="col-sm-12">
       {{ form_widget(form.client, {'attr': {'class': 'form-control'}}) }}
     </div>
   </div>
-    <div class="col-sm-10">
-      {{ form_widget(form.cash, {'attr': {'class': 'btn btn-primary'}}) }}
-      {{ form_widget(form.card, {'attr': {'class': 'btn btn-primary'}}) }}
-      {{ form_widget(form.clear, {'attr': {'class': 'btn btn-primary'}}) }}
+    <div class="col-sm-12">
+      {{ form_widget(form.cash, {'attr': {'class': 'btn btn-primary btn-mlarge'}}) }}
+      {{ form_widget(form.card, {'attr': {'class': 'btn btn-primary btn-mlarge'}}) }}
+      {{ form_widget(form.clear, {'attr': {'class': 'btn btn-primary btn-mlarge'}}) }}
     </div>
     {{ form_end(form) }}
 </div>
