--- a/templates/product/add.html.twig
+++ b/templates/product/add.html.twig
@@ -20,8 +20,8 @@
     </div>
   </div>
     <div class="col-sm-10">
-      {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
-      {{ form_widget(form.back, {'attr': {'class': 'btn btn-primary'}}) }}
+      {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary btn-mlarge'}}) }}
+      {{ form_widget(form.back, {'attr': {'class': 'btn btn-primary btn-mlarge'}}) }}
     </div>
     {{ form_end(form) }}
 </div>
