--- a/templates/style/style.html.twig
+++ b/templates/style/style.html.twig
@@ -14,6 +14,16 @@
     min-height : 80px;
     overflow:hidden;
 }
+  .btn-mlarge {
+    padding: 0px 0px;
+    font-size: 20px;
+    border-radius: 8px;
+    min-width: 135px;
+    max-width: 135px;
+    max-height: 50px;
+    min-height : 50px;
+    overflow:hidden;
+}
 .sidecart {
       border-radius: 2px;
       padding-top: 10px;
