--- a/templates/product/products.html.twig
+++ b/templates/product/products.html.twig
@@ -1,7 +1,7 @@
 {% for product in listProducts %}
       <div class="col-sm-2">
         <h3>
-         <form action="{{ path('sendProduct',{ 'product_name' : product.name}) }}">
+         <form action="{{ path('sendProduct',{ 'product_id' : product.id}) }}">
           <button type="input" class="btn-xlarge btn-primary btn-rounded">{{ product.name }}</button>
          </form>
         </h3>
