Adding list details for orders info

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -11,8 +11,8 @@
       <form action="{{ path('addProduct') }}">
         <button type="submit" class="btn btn-outline-primary waves-effect"><b>ADD PRODUCT</b></button>
       </form>
-      <form action="{{ path('balance') }}">
-        <button type="submit" class="btn btn-outline-primary waves-effect"><b>CLIENT BALANCE</b></button>
+      <form action="{{ path('manageClient') }}">
+        <button type="submit" class="btn btn-outline-primary waves-effect"><b>MANAGE CLIENT</b></button>
       </form>
       <form action="{{ path('addClient') }}">
         <button type="submit" class="btn btn-outline-primary waves-effect"><b>ADD CLIENT</b></button>
