--- a/templates/client/balance.html.twig
+++ b/templates/client/balance.html.twig
@@ -26,9 +26,9 @@
     </div>
 
     <div class="form-group">
-        <h5>{{ form_label(form.new_balance, "Add (€)", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}</h5>
+        <h5>{{ form_label(form.add_balance, "Add (€)", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}</h5>
         <div class="col-sm-10">
-        <b>{{ form_widget(form.new_balance, {'attr': {'class': 'form-control'}}) }}</b>
+        <b>{{ form_widget(form.add_balance, {'attr': {'class': 'form-control'}}) }}</b>
         </div>
    </div>
    
