--- a/templates/order/displayAll.html.twig
+++ b/templates/order/displayAll.html.twig
@@ -11,15 +11,31 @@
       </div>
       </p>    
     </div>
-    
-<ul class="list-group">
-  {% for order in listOrders %}
-    <li class="list-group-item d-flex justify-content-between align-items-center">
-        <h4>Order Id : {{order.id}}</h4>
-        <h4>Client Id : {{order.client}}</h4>
-        <h4>{{order.price}} €</h4>
-    </li>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">Order ID</th>
+      <th scope="col">Client ID</th>
+      <th scope="col">Price</th>
+      <th scope="col">Products</th>
+    </tr>
+  </thead>
+  <tbody>
+  {% for order in listOrders %}    
+    <tr>
+        <td>{{order.id}}</td>
+        <td>{{order.client}}</td>
+        <td>{{order.price}} €</td>
+        <td><ul class="list-group">       
+          {% for product,quantity in order.listproducts %} 
+          <li class="list-group-item d-flex justify-content-between align-items-right">{{product}} : {{quantity}}</li>
+          {% endfor %}</ul>
+        </td>
+        </tr>
   {% endfor %}
+  </tbody>
+</table>
+<ul class="list-group">
       <li class="list-group-item d-flex justify-content-between align-items-center">
         <div id="total"><b>Total Sold</b></div>
         <span class="badge badge-pill badge-primary">{{total}} €</span>
