--- a/templates/style/style.html.twig
+++ b/templates/style/style.html.twig
@@ -54,4 +54,8 @@
 #total{
   font-size:23px;
 }
+.bottom-buffer { margin-bottom:20px; }
+ul.list-group.list-group-striped li:nth-of-type(odd){
+    background: blue;
+}
  </style>
