--- a/templates/order/displayAll.html.twig
+++ b/templates/order/displayAll.html.twig
@@ -36,10 +36,23 @@
   </tbody>
 </table>
 <ul class="list-group">
-      <li class="list-group-item d-flex justify-content-between align-items-center">
+    <li class="list-group-item d-flex justify-content-between align-items-center">
         <div id="total"><b>Total Sold</b></div>
         <span class="badge badge-pill badge-primary">{{total}} €</span>
     </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center active">
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+        <div id="total"><b>Product sold</b></div>
+        <span class="badge badge-pill badge-light">Quantity</span>
+    </li>
+    {% for product,quantity in listTotalProducts %}
+    <li class="list-group-item d-flex justify-content-between align-items-center">
+        <div id="total">{{product}}</div>
+        <span class="badge badge-pill badge-secondary">{{quantity}}</span>
+    </li>
+    {% endfor %}
 </ul>
+
 {% endblock %}
 
