--- a/templates/order/order.html.twig
+++ b/templates/order/order.html.twig
@@ -6,7 +6,7 @@
     </li>
   {% endfor %}
       <li class="list-group-item d-flex justify-content-between align-items-center">
-        <div id="total"><b>Total Price</b></div>
+        <div id="largeFont"><b>Total Price</b></div>
         <span class="badge badge-pill badge-primary">{{price}} €</span>
     </li>
 </ul>
