--- a/templates/style/style.html.twig
+++ b/templates/style/style.html.twig
@@ -18,8 +18,8 @@
     padding: 0px 0px;
     font-size: 20px;
     border-radius: 8px;
-    min-width: 135px;
-    max-width: 135px;
+    min-width: 145px;
+    max-width: 145px;
     max-height: 50px;
     min-height : 50px;
     overflow:hidden;
@@ -51,11 +51,12 @@
 .product{
   font-size:23px;
 }
-#total{
+#largeFont{
   font-size:23px;
 }
-.bottom-buffer { margin-bottom:20px; }
-ul.list-group.list-group-striped li:nth-of-type(odd){
-    background: blue;
+#mediumFont{
+  font-size:18px;
 }
+.bottom-buffer { margin-bottom:20px; }
+
  </style>
