--- a/templates/client/balance.html.twig
+++ b/templates/client/balance.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 
     <div class="jumbotron text-center">
-      <h1>Change/Delete client balance</h1>
+      <h1>Manage Client</h1>
     </div>
     
 <div class="container">
