--- a/templates/style/style.html.twig
+++ b/templates/style/style.html.twig
@@ -9,8 +9,8 @@
     font-size: 23px;
     border-radius: 8px;
     min-width: 150px;
-    max-width: 150px;
-    max-height: 80px;
+    max-width:150px;
+    max-height:150px;
     min-height : 80px;
     overflow:hidden;
 }
@@ -34,6 +34,7 @@
       display:flex;
       flex-direction: column;
  }
+
  .card{
    padding-left:10px;
    padding-top : 5px;
@@ -57,6 +58,13 @@
 #mediumFont{
   font-size:18px;
 }
-.bottom-buffer { margin-bottom:20px; }
+.margin-buffer { 
+  margin-bottom:20px;
+  margin-left : 10px;
+  margin-right : 10px;
+ }
+ .side-buffer { 
+  margin-left : 10px;
+ }
 
  </style>
